@@ -4,6 +4,7 @@ Version 2.1.182
     Fixed several errors in de locale (Thanks TheBusyBiscuit & w1tcherrr)
     Fixed a bug where double smelt never succeeded if the furnace was empty
     Added some safety so that mcMMO automatic save interval is never more frequent than 1 minute
+    Removed a few "silent" exceptions for scoreboards & mcMMO
 
 Version 2.1.181
     mcMMO no longer pointlessly tries to check for missing UUIDs for FlatFile database
